--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,10 +44,10 @@
     <div class="clr"></div>
 
     <div class="content">
-        <div class="hotleft"><a href="ggfw.html"><img src="images/f7.jpg" width="426" height="210" /></a></div>
+        <div class="hotleft"><a href="###"><img src="images/f7.jpg" width="426" height="210" /></a></div>
 
-        <div class="hot"><a href="zygl.html"><img src="images/f8.jpg" width="426" height="210" /></a></div>
-        <div class="hotright"><a href="cy.html"><img src="images/f9.jpg" width="426" height="210" /></a></div>
+        <div class="hot"><a href="/zygl"><img src="images/f8.jpg" width="426" height="210" /></a></div>
+        <div class="hotright"><a href="###"><img src="images/f9.jpg" width="426" height="210" /></a></div>
 
     </div>
 
